Fixing overflow on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,10 @@ footer {
   background-size: cover;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
+.wrapper {
+  overflow-x: hidden;
+  position: relative;
+}
 @keyframes gradient {
   0% {
     background-position: 10% 50%;
